--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -2,41 +2,6 @@
   margin: 0;
 }
 .page-template-page-join-us, .post-type-archive-volunteer {
-  .donate-btn {
-    background-color: $pink;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2.3rem;
-    width: 2.3rem;
-    @media screen and (min-width: $mobile_width) {
-      height: 5rem;
-      width: 5rem;
-    }
-    a {
-      text-decoration: none;
-      color: $black;
-      font-size: 1rem;
-      @media screen and (min-width: $mobile_width) {
-        font-size: 4rem;
-      }
-      i {
-        font-weight: lighter;
-        padding: .5rem;
-        color: $black;
-        &:hover {
-          color: $orange;
-        }
-      }
-      p {
-        display: none;
-      }
-    }
-  }
   .entry-header {
     display: flex;
     justify-content: center;
@@ -69,9 +34,11 @@
       margin-top: 17px;
     }
   }
+  .form-link {
+    color: $black;
+  }
   .rectangle {
     height: 208px;
-    // max-width: $mobile_width;
     box-sizing: border-box;
     flex-direction: column;
     text-decoration: none;
@@ -139,11 +106,9 @@
 
 @media all and (min-width: $mobile_width) {
   .page-template-page-join-us, .post-type-archive-volunteer {
-
     .entry-header {
       width: 768px;
     }
-
     .join-us-section {
       display: flex;
       padding-bottom: initial;
@@ -171,10 +136,9 @@
         border: 4px solid $black;
       }
       p {
-        display: initial;
         font-family: $font__body;
         font-size: $font_d-sub-body;
-        color: black;
+        color: $black;
         width: 163px;
         margin-top: 11px;
         line-height: 22px;
