--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3694,40 +3694,6 @@ span.wpcf7-not-valid-tip {
 #post-18 {
   margin: 0; }
 
-.page-template-page-join-us .donate-btn, .post-type-archive-volunteer .donate-btn {
-  background-color: #F91E72;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 3;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  height: 2.3rem;
-  width: 2.3rem; }
-  @media screen and (min-width: 590px) {
-    .page-template-page-join-us .donate-btn, .post-type-archive-volunteer .donate-btn {
-      height: 5rem;
-      width: 5rem; } }
-  .page-template-page-join-us .donate-btn a, .post-type-archive-volunteer .donate-btn a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 1rem; }
-    @media screen and (min-width: 590px) {
-      .page-template-page-join-us .donate-btn a, .post-type-archive-volunteer .donate-btn a {
-        font-size: 4rem; } }
-    .page-template-page-join-us .donate-btn a i, .post-type-archive-volunteer .donate-btn a i {
-      font-weight: lighter;
-      padding: .5rem;
-      color: #000000; }
-      .page-template-page-join-us .donate-btn a i:hover, .post-type-archive-volunteer .donate-btn a i:hover {
-        color: #f5a623; }
-    .page-template-page-join-us .donate-btn a p, .post-type-archive-volunteer .donate-btn a p {
-      display: none; }
-
 .page-template-page-join-us .entry-header, .post-type-archive-volunteer .entry-header {
   display: -ms-flexbox;
   display: flex;
@@ -3818,6 +3784,9 @@ span.wpcf7-not-valid-tip {
   background-position: 60%; }
   .page-template-page-join-us .join-us-section div:first-child, .post-type-archive-volunteer .join-us-section div:first-child {
     margin-top: 17px; }
+
+.page-template-page-join-us .form-link, .post-type-archive-volunteer .form-link {
+  color: #000000; }
 
 .page-template-page-join-us .rectangle, .post-type-archive-volunteer .rectangle {
   height: 208px;
@@ -3931,10 +3900,9 @@ span.wpcf7-not-valid-tip {
     .page-template-page-join-us .rectangle:hover, .post-type-archive-volunteer .rectangle:hover {
       border: 4px solid #000000; }
     .page-template-page-join-us .rectangle p, .post-type-archive-volunteer .rectangle p {
-      display: initial;
       font-family: lato, novecentosanswide, sans-serif;
       font-size: 18px;
-      color: black;
+      color: #000000;
       width: 163px;
       margin-top: 11px;
       line-height: 22px;
