--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2676,7 +2676,9 @@ input.wpcf7-submit {
   color: #000000;
   font-family: lato,novecentosanswide,sans-serif;
   font-weight: 400;
-  padding: 0; }
+  padding: 0;
+  display: -ms-flexbox;
+  display: flex; }
 
 .popup-entry {
   display: -ms-flexbox;
