cleaned up and styled intern page

--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -73,7 +73,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "about-our-board";
 @import "programs";
 @import "join-us";
-@import "single-volunteer";
+@import "single-intern";
 @import "donate";
 @import "contact-us";
 @import "events";
